--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
         </div>
     </div>
 <div id="images">
-    <img src="assets/images/crystalone.jpg" id="one">
-    <img src="assets/images/crystaltwo.jpg" id="two">
-    <img src="assets/images/crystalthree.jpg" id="three">
-    <img src="assets/images/crystalfour.jpg" id="four">
+    <img src="assets/images/crystalone.jpg" class="one">
+    <img src="assets/images/crystaltwo.jpg" class="one">
+    <img src="assets/images/crystalthree.jpg" class="one">
+    <img src="assets/images/crystalfour.jpg" class="one">
 
 </div>
 
